src/test/deca/syntax/invalid/sansobjet/WrongEquals.deca
// 
// Description: test soustraction incorrecte
// Resultat: erreur ligne 6: il manque une parenthere
{
    if (a ==  {

    }
}
